[Issue 3926] Removed font-size on report criteria panel in favor of standardized look Added subtle margin on <li> to add a gutter between buttons in IE / FF without creating a huge gap in Chrome

--- a/tm/tm.web/src/main/webapp/styles/components.css
+++ b/tm/tm.web/src/main/webapp/styles/components.css
@@ -626,6 +626,8 @@ span.span-green {
 
 #report-criteria-panel li {
 	list-style-type: none;
+	margin-top: 2px;
+	margin-bottom: 2px;
 }
 
 /*******************************
